--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -128,6 +128,15 @@ Get the login name of the current user.
 *since:* 0.3.0
 
 
+== getpid ==
+{{{
+public function getpid():int
+}}}
+Get the process ID.
+
+*since:* 0.3.0
+
+
 == mkdir ==
 {{{
 public function mkdir( path:String ):int
