--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -36,13 +36,13 @@ as tools for the Flash Platform community.*
 
  * the short goal of the project is to provide most of the C standard library (ANSI and POSIX) to an !ActionScript environment. - *DONE*
  * the medium goal is to provide specialized libraries to use sockets or database like SQLite etc.
-    * FileSystem API * HALF DONE* (adding even more)
+    * FileSystem API * DONE* (adding even more)
     * OperatingSystem API *DONE*
     * basic socket (stream, datagram, broadcast, client, server) *DONE*
     * (more to come)
  * the long term goal is to provide a native API that replicate some part of the Flash Player and Adobe Integrated Runtime ([http://www.adobe.com/products/air/ AIR]) API
  * I'm bad a documenting, so I'll try this time to document on the go and provide example for all the APIs
- * some people contact me by email, when I can I add features related to their needs
+ * some people contact me by email, when I can, I add features related to their needs
 
 === Sync ===
 
