--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -46,7 +46,7 @@ as tools for the Flash Platform community.*
 
 === Sync ===
 
-here the list of sync from [http://code.google.com/p/redtamarin] which is a mirror of tamarin-redux
+here the list of sync from the [http://code.google.com/p/redshell] project, which is a mirror of tamarin-redux
  * *25/07/2010* tamarin-redux-e07844ed9e
  * *26/12/2010* tamarin-redux-d8b78be5b40f
 
