Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -35,6 +35,7 @@
     * [Projector Projector]
     * [Security Security]
     * [Examples Examples]
+       * [Examples_Socket Socket programming]
     * [Tutorials Tutorials]
     * [FAQ FAQ]
   
