--- a/wiki/C_socket.wiki
+++ b/wiki/C_socket.wiki
@@ -95,8 +95,6 @@ Adding this flag prevents that signal from being raised.<br>
 
 == Misc. ==
 || *SOMAXCONN* || The maximum backlog queue length. ||
-|| ** || IPv4 local host address. ||
-|| ** || IPv4 broadcast address. ||
 
 *since:* 0.3.0
 
@@ -141,6 +139,24 @@ import C.socket.*;
 trace( "names: " + gethostbyname("www.youtube.com") ); //names: youtube-ui.l.google.com,www.youtube.com
 trace( "ips: " + gethostbyname("www.youtube.com", true) ); //ips: 209.85.143.93,209.85.143.190,209.85.143.136,209.85.143.91
 }}}
+
+*since:* 0.3.0
+
+
+== getpeername ==
+{{{
+public function getpeername( descriptor:int ):String
+}}}
+Get the name of the peer socket.
+
+*since:* 0.3.0
+
+
+== getsockname ==
+{{{
+public function getsockname( descriptor:int ):String
+}}}
+Get the socket name.
 
 *since:* 0.3.0
 
